# covenant

./: .gitignore  ADR-001-extraction.md  README.md  SPEC.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json
.github/workflows/: check.yml  publish.yml
.kin/: code-map.json  config  index.json
contracts/: reeve.baton.event.shape.json  reeve.baton.event.shape.policy.yaml
py/src/covenant/: __init__.py  errors.py  loader.py  runtime.py  store.py  types.py
py/tests/: test_covenant.py  test_golden_vectors.py
src/: index.ts  registry.ts  store.ts  types.ts  validate.ts
src/contracts/: reeve-baton-event.contract.ts
tests/: covenant.test.ts  golden-vectors.test.ts
ts/: package.json  tsconfig.json
ts/src/: errors.ts  index.ts  registry.ts  store.ts  types.ts  validate.ts
ts/src/contracts/: reeve-baton-event.contract.ts
ts/tests/: golden-vectors.test.ts
vectors/: policy-cases.json
