[project]
name = "covenant"
version = "0.1.0"
description = "Contract validation runtime: per-env policy + sliding-window violation budget. Pydantic v2 sibling of covenant."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jeremy McEntire", email = "jandrewmcentire@gmail.com" },
]
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.29"]
sqlalchemy = ["sqlalchemy>=2.0", "asyncpg>=0.29"]
test = ["pytest>=7.4", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "py/src" }

[tool.setuptools.packages.find]
where = ["py/src"]

[tool.pytest.ini_options]
testpaths = ["py/tests"]
asyncio_mode = "auto"
